[package]
name = "comportlist"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Hardfood <mdzzdyxc@163.com>"]
description = "easy to show all windows serialport contant vitrual port"
repository = "https://github.com/MDZZDYXCMDZZDYXC/comportlist"
license = "MIT OR Apache-2.0"
license-file = "LICENSE.txt"
keywords = ["serialport","portscan"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
readme = "README.md"
[dependencies]
winapi = {version = "0.3.9",features = [
    "cguid",
    "commapi",
    "errhandlingapi",
    "fileapi",
    "guiddef",
    "handleapi",
    "minwinbase",
    "minwindef",
    "ntdef",
    "setupapi",
    "winbase",
    "winerror",
    "winnt",
]}
